# synapse

./: .gitignore  CHANGES_APPLIED.md  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION_SENSE_FIXES.md  MANIFEST.in  MONOREPO_IMPLEMENTATION_PLAN.md  MONOREPO_OPTIMIZATION_PLAN.md  README.md  SCHEMA_CONSISTENCY_ANALYSIS.md  SCHEMA_FORMAT_COMPARISON.md  VALIDATION_HOOKS_SUMMARY.md  VALIDATION_INTEGRATION_SUMMARY.md  pyproject.toml  setup.py  task-format-schema-v2-proposal.md  test_validate_config.py
.claude/: settings.json
.claude/agents/: auditor.md  dev.md  dispatcher.md  library-workflow-builder.md
.claude/commands/: agent.md  status.md  validate.md  workflow.md
.specify/memory/: constitution.md
docs/: ARCHITECTURE.md  MIGRATION_GUIDE.md  OPTION_6_GUIDE.md  PRD.md  SIMPLIFIED_APPROACH.md  USER_GUIDE.md  schema-v2-design.md  schema-v2-migration-guide.md  schema-v2-validation-rules.md  specify-prompt.md
docs/architecture/: IMPLEMENTATION_TASKS.md  SUMMARY.txt  modularization_proposal.md
docs/archive/: NO_SUB_AGENTS.md  phase-4-hook-integration.md
docs/examples/hooks/: pre-tool-use-v2.py
legacy/: README.md
legacy/resources/schemas/: synapse-config-schema.json
legacy/resources/settings/: config-template.json
legacy/resources/workflows/feature-implementation-v2/: README.md  settings.json
live_testing/: stop_qa_check.py
openspec/: project.md
openspec/changes/implement-synapse-cli-system/: design.md  proposal.md  tasks.md
resources/: README.md
resources/commands/synapse/: sense.md
resources/schemas/: synapse-config-schema.json
resources/settings/: config-template.json
resources/workflows/feature-implementation/: README.md  settings.json
resources/workflows/feature-implementation-v2/: README.md  settings.json
resources/workflows/feature-implementation-v2/hooks/: stop_qa_check.py  task-edit-validator.py  user-prompt-reminder.sh
resources/workflows/feature-implementation/agents/: implementer.md  verifier.md
resources/workflows/feature-implementation/hooks/: README.md  active-tasks-enforcer.py  change_detection.py  implementer-post-tool-use.py  implementer-pre-tool-use.py  post-tool-use.py  pre-tool-use.py  stop_qa_check.py  task-edit-validator.py  task_parser.py  user-prompt-reminder.sh  validate_config.py  validate_quality_commands.py  verification-complete.py
resources/workflows/feature-planning/: README.md  settings.json
resources/workflows/feature-planning/agents/: writer.md
resources/workflows/feature-planning/hooks/: user-prompt-reminder.sh  writer-post-tool-use.py
scripts/: build.sh  demo.sh  dev-setup.sh  lint-fix.sh  quality-check.sh  test.sh  test_integration.py
specs/001-poc-use-specify/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-poc-use-specify/contracts/: cli-commands.yaml  test_cli_contracts.py
specs/002-improve-synapse-workflow/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-improve-synapse-workflow/contracts/: cli-template-integration.yaml  template-integration-service.yaml
src/synapse_cli/: __init__.py  __main__.py  cli.py
src/synapse_cli/commands/: init.py  workflow.py
src/synapse_cli/core/: models.py  types.py
src/synapse_cli/infrastructure/: backup_manager.py  config_store.py  file_operations.py  manifest_store.py  persistence.py  resources.py
src/synapse_cli/parsers/: __init__.py  schema_generator.py  schema_validator.py  task_schema_parser.py
src/synapse_cli/services/: removal_service.py  settings_service.py  validation_service.py  workflow_service.py
synapse/: __init__.py
synapse/cli/: __init__.py  commands.py  init.py  main.py  template.py
synapse/models/: __init__.py  command.py  project.py  task.py  template.py
synapse/services/: __init__.py  command_registry.py  integrator.py  scaffolder.py  validator.py
synapse/templates/: __init__.py
synapse/templates/claude/: CLAUDE.md  CLAUDE.md.j2
synapse/templates/claude/agents/: auditor.md  dev.md  dispatcher.md
synapse/templates/claude/commands/: agent.md  status.md  synapse-audit.md  synapse-dev.md  synapse-dispatch.md  synapse-implement.md  synapse-plan.md  synapse-review.md  validate.md  workflow.md
synapse/templates/synapse/: config.yaml  task_log.json
synapse/utils/: __init__.py  conflicts.py
tests/: README.md  __init__.py  test_change_detection.py  test_edge_cases.py  test_integration_workflow.py  test_monorepo_optimization_integration.py  test_multi_format_support.py  test_schema_aware_blocking.py  test_schema_generator.py  test_stop_qa_check.py  test_strict_lint_warnings.py  test_task_parser.py  test_task_schema_parser.py  test_verification_workflow.py  test_workflow_switching.py
tests/cli/: test_command_conflicts.py  test_init_command.py  test_init_template_integration.py
tests/e2e/: test_cli_commands.py  test_full_verification_loop.py
tests/fixtures/formats/: custom_format_tasks.md  github_spec_kit_tasks.md  openspec_tasks.md
tests/fixtures/monorepo-optimization/: README.md
tests/fixtures/monorepo-optimization/.synapse/: config.json
tests/integration/: test_claude_integration.py  test_claude_preservation.py  test_full_workflow.py  test_project_scaffolding.py  test_slash_commands.py  test_template_service.py  test_workflow_application.py
tests/legacy/: README.md  test_change_detection.py  test_monorepo_optimization_integration.py  test_schema_aware_blocking.py  test_strict_lint_warnings.py  test_task_parser.py  test_verification_workflow.py
tests/unit/: test_cli.py  test_command_models.py  test_conflicts.py  test_integrator.py  test_template_models.py
tests/unit/commands/: test_init.py  test_workflow.py
tests/unit/core/: test_models.py  test_types.py
tests/unit/infrastructure/: test_backup_manager.py  test_config_store.py  test_file_operations.py  test_manifest_store.py  test_persistence.py  test_resources.py
tests/unit/services/: test_removal_service.py  test_settings_service.py  test_validation_service.py  test_workflow_service.py
tests/unit/test_templates/: test_agent_templates.py
(+24 files in other folders)
