[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["synapse*"]
exclude = ["specs*", "tests*"]

[tool.setuptools.package-data]
synapse = ["templates/**/*"]

[project]
name = "synapse-workflow"
version = "1.0.0"
description = "Agent workflow orchestration for Claude Code"
authors = [
    {name = "Synapse Team", email = "synapse@example.com"}
]
license = "MIT"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.0.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "types-PyYAML",
]

[project.scripts]
synapse = "synapse.cli.main:cli"

[project.urls]
Homepage = "https://github.com/synapse-team/synapse-workflow"
Repository = "https://github.com/synapse-team/synapse-workflow"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--cov=synapse",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80",
]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "N",  # pep8-naming
    "S",  # flake8-bandit
    "A",  # flake8-builtins
    "RUF", # Ruff-specific rules
]
ignore = [
    "S101", # Allow assert statements in tests
    "S603", # Allow subprocess calls (needed for CLI)
    "S607", # Allow shell command execution
    "N805", # Allow cls parameter in class methods (Pydantic validators)
    "S112", # Allow try-except-continue patterns
    "S701", # Allow Jinja2 without autoescape for template files
    "B904", # Allow raise without from in some contexts
    "B019", # Allow lru_cache on methods for performance optimization
    "S324", # Allow MD5 for non-security content hashing
]

# Ruff formatter disabled - using Black for formatting
# [tool.ruff.format]
# Formatting is handled by Black

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false